--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,5 @@
 body {
   position: relative;
-  background-color: #144184;
-  color: #333;
   margin: 0px 0px 0px 0px;
   padding-top: 70px;
 }
@@ -68,22 +66,37 @@ h3 a:hover {
 }
 
 #work {
-  background-color: #fff;
+  background-color: #cc0000;
   padding: 10px;
 }
 
 #work img {
-  border: 2px solid #cc0000;
+  border: 2px solid #fff;
   border-radius: 15px;
+  opacity: 0.5;
+  filter: alpha(opacity=100);
+}
+
+#work img:hover {
+  opacity: 1;
+  filter: alpha(opacity=50);
 }
 
 #work h3 a {
-  color: #cc0000;
+  color: #fff;
 }
 
 #work h3 a:hover {
+  color: #cc0000;
+  background-color: #fff;
+}
+
+#work p {
+  display: inline-block;
+  text-align: justify;
   color: #fff;
 }
+
 #services {
   background-image: url(https://unsplash.it/1280/1024?random&sig=3);
   background-size: cover;
