--- a/css/styles.css
+++ b/css/styles.css
@@ -1,107 +1,248 @@
 body {
   position: relative;
   margin: 0px 0px 0px 0px;
-  padding-top: 70px;
 }
+
 section {
   border-bottom: 1px solid #ddd;
-  font-family: 'Montserrat', serif;
-  font-size: 14px;
-  text-align: center;
   min-height: 50vh;
   margin-top: 0px;
   margin-left: -15px;
   margin-right: -15px;
 }
 
+
+/** NavBar Styles **/
+.nav-logo {
+  margin: -15px 0px 0px -15px;
 }
-h3 a {
-  background-color: #333;
-  text-decoration: none;
-  display: block;
-  padding: 5px 5px;
-  font-family: 'Merriweather', serif;
-  margin-top: -15px;
+/** End NavBar Styles **/
+
+
+/** Hero Styles **/
+#hero {
+  background-image: url(https://unsplash.it/1280/1024?random&sig=1);
+  background-size: cover;
+  background-position: center center;
   text-align: center;
+  margin-top: -50px;
+  color: #fff;
 }
 
-h3 a:hover {
-  background-color: #cc0000;
+#hero h3 {
+  background-color: rgba(0,0,0,.8);
+  display: inline-block;
+  padding: 15px;
   border-radius: 15px;
-  color: #fff;
-  text-decoration: none;
-  padding: 5px;
+  font-family: 'Merriweather', serif;
+  margin-top: 20%;
+}
+
+#hero p {
+  background-color: rgba(0,0,0,.8);
+  display: inline-block;
+  border-radius: 15px;
+  padding: 15px;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 14px;
 }
 
 .emphasis {
   font-size: 20px;
   color: #cc0000;
 }
+/** End Hero Styles **/
 
-.nav-logo {
-  margin: -15px 0px 0px -15px;
-}
 
-#hero {
-  background-image: url(https://unsplash.it/1280/1024?random&sig=1);
-  background-size: cover;
-  background-position: center center;
-  margin-top: -50px;
-  color: #fff;
-}
-
-#hero h3 {
-  background-color: rgba(0,0,0,.5);
-  display: inline-block;
-  margin-top: 20%;
-  padding: 15px;
-  border-radius: 15px;
-}
-
-#hero p {
-  background-color: rgba(0,0,0,.5);
-  display: inline-block;
-  border-radius: 15px;
-  padding: 15px;
-}
-
+/** Work Styles **/
 #work {
-  background-color: #cc0000;
+  background-color: #800000;
   padding: 10px;
+  text-align: center;
 }
 
 #work img {
-  border: 2px solid #fff;
+  border: 5px solid #fff;
   border-radius: 15px;
-  opacity: 0.5;
-  filter: alpha(opacity=100);
+  opacity: 0.7;
+  filter: alpha(opacity=70);
+  margin: 0px;
 }
 
 #work img:hover {
   opacity: 1;
-  filter: alpha(opacity=50);
+  filter: alpha(opacity=100);
 }
 
 #work h3 a {
   color: #fff;
+  padding: 5px;
+  display: inline-block;
+  border-radius: 15px;
+  font-family: 'Merriweather', serif;
 }
 
 #work h3 a:hover {
-  color: #cc0000;
+  color: #800000;
   background-color: #fff;
+  text-decoration: none;
 }
 
 #work p {
   display: inline-block;
   text-align: justify;
   color: #fff;
+  padding: 0px 5px 0px 5px;
 }
+/** End Work Styles **/
 
+
+/** Services Styles **/
 #services {
   background-image: url(https://unsplash.it/1280/1024?random&sig=3);
   background-size: cover;
   background-position: center center;
 }
+.serviceBox{
+    text-align: center;
+    margin-top: 60px;
+    position: relative;
+    z-index: 1;
+}
+.serviceBox .service-icon{
+    width: 78px;
+    height: 78px;
+    border-radius:3px;
+    background: #fff;
+    margin: 0 auto;
+    position: absolute;
+    top: -34px;
+    left: 0;
+    right: 0;
+    z-index: 1;
+    transition: all 0.3s ease-out 0s;
+}
+.serviceBox:hover .service-icon{
+    transform: rotate(45deg);
+}
+.serviceBox .service-icon span{
+    display: inline-block;
+    width: 60px;
+    height: 60px;
+    line-height: 60px;
+    border-radius:3px;
+    background: #800000;
+    font-size: 30px;
+    color: #fff;
+    margin: auto;
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    transition: all 0.3s ease-out 0s;
+}
+.serviceBox .service-icon span i{
+    transition: all 0.3s ease-out 0s;
+}
+.serviceBox:hover .service-icon span i{
+    transform: rotate(-45deg);
+}
+.serviceBox .service-content{
+    background: #fff;
+    border: 1px solid #e7e7e7;
+    border-radius: 3px;
+    padding: 55px 15px;
+    position: relative;
+}
+.serviceBox .service-content:before{
+    content: "";
+    display: block;
+    width: 80px;
+    height: 80px;
+    border: 1px solid #e7e7e7;
+    border-radius: 3px;
+    margin: 0 auto;
+    position: absolute;
+    top: -37px;
+    left: 0;
+    right: 0;
+    z-index: -1;
+    transition: all 0.3s ease-out 0s;
+}
+.serviceBox:hover .service-content:before{
+    transform: rotate(45deg);
+}
+.serviceBox .title{
+    font-size: 17px;
+    font-weight: 500;
+    color: #324545;
+    text-transform: uppercase;
+    margin: 0 0 25px 0;
+    position: relative;
+    transition: all 0.3s ease-out 0s;
+}
+.serviceBox:hover .title{
+    color: #800000;
+}
+.serviceBox .description{
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 24px;
+    margin-bottom: 0;
+}
+.serviceBox .read-more{
+    display: block;
+    width: 35px;
+    height: 35px;
+    line-height: 35px;
+    border-radius: 50%;
+    background: #fff;
+    border: 1px solid #e7e7e7;
+    font-size: 14px;
+    color: #c4c2c2;
+    margin: 0 auto;
+    position: absolute;
+    bottom: -17px;
+    left: 0;
+    right: 0;
+    transition: all 0.3s ease-out 0s;
+}
+.serviceBox .read-more:hover{
+    border: 1px solid #800000;
+    color: #800000;
+}
+.serviceBox.green .service-icon span{ background: #800000; }
+.serviceBox.blue .service-icon span{ background: #800000; }
+.serviceBox.orange .service-icon span{ background: #800000; }
+.serviceBox.green:hover .title{ color: #800000; }
+.serviceBox.blue:hover .title{ color: #800000; }
+.serviceBox.orange:hover .title{ color: #800000; }
+.serviceBox.green .read-more:hover{
+    border: 1px solid #800000;
+    color: #800000;
+}
+.serviceBox.blue .read-more:hover{
+    border: 1px solid #800000;
+    color: #800000;
+}
+.serviceBox.orange .read-more:hover{
+    border: 1px solid #800000;
+    color: #800000;
+}
+#services .fa {
+  margin-top: 15px;
+}
+@media only screen and (max-width: 990px){
+    .serviceBox{ margin-bottom: 30px; }
+}
+@media only screen and (max-width: 767px){
+    .serviceBox{ margin-bottom: 80px; }
+}
+/** End Services Styles **/
+
+
+
 #about {
   background-image: url(https://unsplash.it/1280/1024?random&sig=4);
   background-size: cover;
