--- a/css/styles.css
+++ b/css/styles.css
@@ -4,14 +4,13 @@ body {
 }
 
 section:not(#about) {
-  border-bottom: 1px solid #800000;
+  border-bottom: 1px solid #cc0000;
   min-height: 50vh;
   margin-top: 0px;
   margin-left: -15px;
   margin-right: -15px;
   font-size: 18px;
 }
-
 
 /** NavBar Styles **/
 .navbar {
@@ -43,23 +42,39 @@ section:not(#about) {
   text-align: center;
   margin-top: 0;
   color: #fff;
-  padding-top: 15%;
+  padding-top: 20%;
   padding-bottom: 15%;
+  position: relative;
+}
+
+#hero::before {
+  content: "";
+  display: block;
+  position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background-color: rgba(0, 0, 0, .5);
+    z-index: 0;
 }
 
 #hero h3 {
-  background-color: rgba(0,0,0,.8);
   display: inline-block;
   padding: 15px;
-  font-family: 'Merriweather', serif;
+  font-family: 'Roboto Condensed', sans-serif;
+  letter-spacing: 5px;
+1
 }
 
 #hero p {
-  background-color: rgba(0,0,0,.8);
+  background-color: rgba(0, 0, 0, .8);
   display: inline-block;
   padding: 15px;
   font-family: 'Montserrat', sans-serif;
   font-size: 18px;
+  position: relative;
+  z-index: 3;
 }
 
 .emphasis {
@@ -71,13 +86,13 @@ section:not(#about) {
 
 /** Services Styles **/
 #services {
-  padding-top: 10%;
-  padding-bottom: 10%;
   min-height: 25vh;
 }
 .serviceBox{
     text-align: center;
-    margin-top: 0px;
+    margin-top: 139px;
+    margin-bottom: 100px;
+
     position: relative;
     z-index: 1;
 }
@@ -147,8 +162,8 @@ section:not(#about) {
     transform: rotate(45deg);
 }
 .serviceBox .title {
-    font-family: 'Merriweather', serif;
-    font-size: 20px;
+    font-family: 'Roboto Condensed', sans-serif;
+    font-size: 24px;
     font-weight: 500;
     color: #333;
     text-transform: uppercase;
@@ -160,7 +175,7 @@ section:not(#about) {
     color: #cc0000;
 }
 .serviceBox .description{
-    font-size: 18px;
+    font-size: 16px;
     font-weight: 500;
     line-height: 24px;
     margin-bottom: 0;
@@ -190,13 +205,7 @@ section:not(#about) {
 .serviceBox.green .service-icon span{ background: #cc0000; }
 .serviceBox.blue .service-icon span{ background: #cc0000; }
 .serviceBox.orange .service-icon span{ background: #cc0000; }
-.serviceBox.green:hover .title{ color: #cc0000; }
-.serviceBox.blue:hover .title{ color: #cc0000; }
-.serviceBox.orange:hover .title{ color: #cc0000; }
-.serviceBox.green .read-more:hover{
-    border: 1px solid #cc0000;
-    color: #cc0000;
-}
+
 .serviceBox.blue .read-more:hover{
     border: 1px solid #cc0000;
     color: #cc0000;
@@ -220,7 +229,7 @@ section:not(#about) {
 /** About Styles **/
 .halfbox-left {
     display: inline-block;
-    padding: 50px 100px 50px 100px;
+    padding: 80px 100px 80px 100px;
     color: #fff;
     background: #cc0000;
     min-height: 400px;
@@ -240,31 +249,22 @@ section:not(#about) {
 }
 
 #about a:hover {
-  color: #333;
-}
-
-.halfbox-right {
-    background: url() no-repeat 0px 0px;
-    min-height: 400px;
-    background-size: contain;
-    background-position: center;
-    background-color: #800000;
+  color: goldenrod;
 }
 
 .site-title h3 {
     color: #fff;
-    margin-bottom: 30px;
-    font-family: 'Merriweather', serif;
-    font-size: 28px;
-
+    margin-bottom: 20px;
+    font-family: 'Roboto Condensed', sans-serif;
+    font-size: 24px;
 }
 
-.site-title p {
-    font-size: 18px;
+#about p {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 16px;
     color: #e4e2e2;
     text-align: center;
     line-height: 20px;
-    padding-bottom: 30px;
 }
 .img-right {
     background: url(../images/about_me.jpg) no-repeat 0px 0px;
@@ -274,54 +274,38 @@ section:not(#about) {
     text-align: center;
 }
 
-.img-left {
-    background: url(../images/sandy_feet.jpg) no-repeat 0px 0px;
-    min-height: 400px;
-    background-size: cover;
-    padding: 168px 0px;
-    text-align: center;
-}
 /** End About Styles **/
 
-/** Follow Styles **/
 
-/** End Follow Styles **/
 /** Work Styles **/
 #portfolio {
   background-color: #fff;
-  padding: 10px;
   text-align: center;
 }
 
-#portfolio img {
-  border: 5px solid #800000;
-  border-radius: 15px;
-  opacity: 0.5;
-  filter: alpha(opacity=50);
-  margin: 0px;
+#portfolio .top {
+  margin-top: 100px;
 }
-
-#portfolio img:hover {
-  opacity: 1;
-  filter: alpha(opacity=100);
+#portfolio .bottom {
+  margin-bottom: 100px;
+}
+#portfolio img {
+  border: 2px solid #cc0000;
 }
 
 #portfolio h3 a {
-  color: #800000;
-  padding: 5px 10px 5px 10px;
+  color: #cc0000;
+  padding: 0px;
   display: inline-block;
-  border-radius: 15px;
-  font-family: 'Merriweather', serif;
+  font-family: 'Roboto Condensed', sans-serif;
 }
 
 #portfolio h3 a:hover {
-  color: #fff;
-  background-color: #800000;
+  color: goldenrod;
   text-decoration: none;
 }
 
 #portfolio p {
-  display: inline-block;
   text-align: center;
   font-family: 'Montserrat', sans-serif;
   color: #333;
