--- a/css/styles.css
+++ b/css/styles.css
@@ -3,9 +3,9 @@ body {
   margin: 0px 0px 0px 0px;
 }
 
-section:not(#about) {
+section {
   border-bottom: 1px solid #cc0000;
-  min-height: 50vh;
+  min-height: 30vh;
   margin-top: 0px;
   margin-left: -15px;
   margin-right: -15px;
@@ -17,19 +17,25 @@ section:not(#about) {
     min-height: 80px;
     margin-bottom: 20px;
     font-family: 'Montserrat', sans-serif;
-    letter-spacing: 1px;
     font-size: 16px;
 }
 
-.navbar-nav > li > a {
-    padding-top: 30px;
-    padding-bottom: 15px;
+.navbar-toggle {
+  margin-top: 20px;
 }
+
 .navbar-right {
-  margin-right: 94px;
+  margin-right: 50px;
+  margin-top: 16px
 }
+.nav > li > a {
+    position: relative;
+    display: block;
+    padding: 15px 10px;
+}
+
 .nav-logo {
-  margin: 0px 0px 0px 94px;
+  margin: -5px 0px 0px 65px;
 }
 /** End NavBar Styles **/
 
@@ -59,10 +65,10 @@ section:not(#about) {
     z-index: 0;
 }
 
-#hero h3 {
+#hero h2 {
   display: inline-block;
   padding: 15px;
-  font-family: 'Roboto Condensed', sans-serif;
+  font-family: 'Monserrat', sans-serif;
   letter-spacing: 5px;
 1
 }
@@ -71,8 +77,9 @@ section:not(#about) {
   background-color: rgba(0, 0, 0, .8);
   display: inline-block;
   padding: 15px;
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Roboto Condensed', sans-serif;
   font-size: 18px;
+  line-height: 24px;
   position: relative;
   z-index: 3;
 }
@@ -87,12 +94,10 @@ section:not(#about) {
 /** Services Styles **/
 #services {
   min-height: 25vh;
+  padding: 100px 30px 75px 30px;
 }
 .serviceBox{
     text-align: center;
-    margin-top: 139px;
-    margin-bottom: 100px;
-
     position: relative;
     z-index: 1;
 }
@@ -118,7 +123,6 @@ section:not(#about) {
     width: 60px;
     height: 60px;
     line-height: 60px;
-    border-radius:3px;
     background: #cc0000;
     font-size: 30px;
     color: #fff;
@@ -162,23 +166,24 @@ section:not(#about) {
     transform: rotate(45deg);
 }
 .serviceBox .title {
-    font-family: 'Roboto Condensed', sans-serif;
-    font-size: 24px;
+    font-family: 'Monserrat', sans-serif;
+    font-size: 20px;
     font-weight: 500;
     color: #333;
-    text-transform: uppercase;
-    margin: 0 0 25px 0;
+    margin: 15px 0 25px 0;
     position: relative;
     transition: all 0.3s ease-out 0s;
 }
 .serviceBox:hover .title{
     color: #cc0000;
 }
-.serviceBox .description{
-    font-size: 16px;
+.serviceBox .description {
+    font-family: 'Roboto Condensed', sans-serif;
+    font-size: 18px;
     font-weight: 500;
     line-height: 24px;
     margin-bottom: 0;
+
 }
 .serviceBox .read-more{
     display: block;
@@ -255,22 +260,22 @@ section:not(#about) {
 .site-title h3 {
     color: #fff;
     margin-bottom: 20px;
-    font-family: 'Roboto Condensed', sans-serif;
-    font-size: 24px;
+    font-family: 'Monserrat', sans-serif;
+    font-size: 20px;
 }
 
 #about p {
-    font-family: 'Montserrat', sans-serif;
-    font-size: 16px;
-    color: #e4e2e2;
+    font-family: 'Roboto Condensed', sans-serif;
+    font-size: 18px;
+    color: #fff;
     text-align: center;
-    line-height: 20px;
+    line-height: 24px;
 }
 .img-right {
     background: url(../images/about_me.jpg) no-repeat 0px 0px;
     min-height: 400px;
     background-size: cover;
-    padding: 168px 0px;
+    padding: 201px 0px;
     text-align: center;
 }
 
@@ -281,23 +286,23 @@ section:not(#about) {
 #portfolio {
   background-color: #fff;
   text-align: center;
+  padding: 50 30px 35px 30px;
 }
 
-#portfolio .top {
-  margin-top: 100px;
-}
-#portfolio .bottom {
-  margin-bottom: 100px;
 }
 #portfolio img {
   border: 2px solid #cc0000;
 }
 
+#portfolio .img-top {
+  margin-top: 10px;
+}
 #portfolio h3 a {
   color: #cc0000;
+  font-size: 20px;
   padding: 0px;
   display: inline-block;
-  font-family: 'Roboto Condensed', sans-serif;
+  font-family: 'Monserrat', sans-serif;
 }
 
 #portfolio h3 a:hover {
@@ -307,9 +312,11 @@ section:not(#about) {
 
 #portfolio p {
   text-align: center;
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Roboto Condensed', sans-serif;
   color: #333;
-  padding: 0px 5px 0px 5px;
+  font-size: 18px;
+  line-height: 24px;
+  padding: 0px 10px 0px 10px;
 }
 /** End Work Styles **/
 
