--- a/css/styles.css
+++ b/css/styles.css
@@ -18,8 +18,16 @@ section {
     margin-bottom: 20px;
     font-family: 'Montserrat', sans-serif;
     font-size: 16px;
+    color: #fff;
 }
 
+.navbar-inverse .navbar-nav>li>a {
+    color: #fff;
+}
+.navbar-inverse .navbar-nav>li>a:hover {
+    color: #cc0000;
+    background-color: transparent;
+}
 .navbar-toggle {
   margin-top: 20px;
 }
@@ -286,7 +294,7 @@ section {
 #portfolio {
   background-color: #fff;
   text-align: center;
-  padding: 50 30px 35px 30px;
+  padding: 50px 30px 35px 30px;
 }
 
 }
@@ -324,4 +332,132 @@ section {
   background-image: url(https://unsplash.it/1280/1024?random&sig=6);
   background-size: cover;
   background-position: center center;
+  padding: 50px 10px 35px 10px;
+  position: relative;
 }
+
+
+#contact legend {
+    display: block;
+    width: 100%;
+    padding: 0;
+    margin-bottom: 14px;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 24px;
+    color: #fff;
+    border: none;
+}
+
+.well {
+    min-height: 20px;
+    padding: 19px;
+    margin-bottom: 20px;
+    background-color: rgba(0, 0, 0, .55);
+    border: 1px solid #e3e3e3;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
+}
+.control-label {
+    display: inline-block;
+    max-width: 100%;
+    margin-bottom: 5px;
+    font-family: 'Roboto Condensed', sans-serif;
+    color: #fff;
+    margin-right: -15px;
+}
+
+.btn-lg, .btn-group-lg > .btn {
+    padding: 10px 16px;
+    font-family: 'Roboto Condensed', sans-serif;
+    font-size: 20px;
+    line-height: 1.3333333;
+    margin-right: 15px;
+    margin-bottom: -20px;
+}
+
+.map {
+  position: relative;
+  padding-bottom: 75%;
+  height: 0;
+  overflow: hidden;
+}
+.map iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100% !important;
+  height: 100% !important;
+}
+/** Footer Styles **/
+footer {
+  padding: 30px 60px 5px 60px;
+}
+.page-footer {
+  background-color: #222;
+}
+
+.page-footer h3 {
+  color: #fff;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 24px;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+}
+
+footer .fa {
+  color: #fff;
+  font-size: 30px;
+  margin-right: 25px;
+}
+footer .fa-mobile {
+  margin-right: 35px;
+  margin-left: 8px;
+}
+
+footer .fa-envelope-o {
+  font-size: 20px;
+  margin-left: 5px;
+}
+
+footer .info {
+  color: #fff;
+  font-size: 16px;
+  font-family: 'Roboto Condensed', sans-serif;
+  letter-spacing: 1px;
+}
+
+footer .footer-nav {
+  margin-top: 30px;
+  margin-bottom: 20px;
+  text-align: right;
+  letter-spacing: 2px;
+  line-height: 24px;
+}
+footer .footer-links {
+  color: #fff;
+  font-family: 'Montserrat', sans-serif;
+  list-style-type: none;
+}
+
+footer .footer-item a {
+  text-decoration: none;
+  color: #fff;
+}
+
+footer .footer-item a:hover {
+  text-decoration: none;
+  color: #cc0000;
+}
+.copyright div {
+  text-align: center;
+  color: #fff;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+}
+@media only screen and (max-width: 990px){
+    .footer-nav{
+      text-align: right;
+      margin-left: 0px; }
+}
+@media only screen and (max-width: 767px){
+    .footer-nav{ text-align: right; }
