--- a/css/styles.css
+++ b/css/styles.css
@@ -416,7 +416,8 @@ footer .fa-mobile {
 
 footer .fa-envelope-o {
   font-size: 20px;
-  margin-left: 5px;
+  margin-left: 4px;
+  margin-top: 5px;
 }
 
 footer .info {
@@ -426,6 +427,18 @@ footer .info {
   letter-spacing: 1px;
 }
 
+footer .info a {
+  color: #fff;
+  font-size: 16px;
+  font-family: 'Roboto Condensed', sans-serif;
+  letter-spacing: 1px;
+  text-decoration: none;
+  margin-left: 5px;
+}
+
+footer .info a:hover {
+  color: #cc0000;
+}
 footer .footer-nav {
   margin-top: 30px;
   margin-bottom: 20px;
